--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="r3">
                     <p class="lexend-peta-">read</p>
                     <div class="icon">
-                        <img src="img/Arrow 1.svg" alt="icon">
+                        <img src="39526.svg" alt="icon">
                     </div>
                  </div>
              </main>
